Using Path.of as suggested.